# photo-manager

./: .gitignore  AGENTS.md  DESIGN.md  README.md  build-tauri-windows.bat  build-tauri-windows.ps1  build-tauri.sh  dev-tauri.sh  package.json
.github/workflows/: release.yml
.sisyphus/drafts/: scan-concurrency-optimization.md
data/: .gitkeep
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ConfirmModal.jsx  DirectoryBrowser.jsx  DuplicateModal.jsx  MediaGrid.jsx  PhotoModal.jsx  VideoModal.jsx
frontend/src/hooks/: useZoomPan.js
frontend/src/pages/: AlbumDetail.jsx  Albums.jsx  Home.jsx  Settings.jsx  Tags.jsx  Trash.jsx
frontend/src/services/: api.js  api.tauri.ts  api.unified.js  scanService.js
frontend/src/styles/: AlbumDetail.css  Albums.css  App.css  ConfirmModal.css  DirectoryBrowser.css  DuplicateModal.css  Home.css  MediaGrid.css  PhotoModal.css  Settings.css  Tags.css  Trash.css  VideoModal.css  global.css
scripts/: generate_app_icon.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: albums.rs  cache.rs  config.rs  directories.rs  media.rs  mod.rs  photos.rs  tags.rs  trash.rs  videos.rs
src-tauri/src/models/: album.rs  config.rs  mod.rs  photo.rs  tag.rs  video.rs
src-tauri/src/scanner/: geocoder.rs  mod.rs  photo_scanner.rs  video_scanner.rs
src-tauri/src/store/: cache_store.rs  data_store.rs  mod.rs
(+2 files in other folders)
