[package]
name = "photo-manager"
version = "1.0.0"
description = "Photo Manager - Local photo/video management"
authors = ["Photo Manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
image = "0.25"
kamadak-exif = "0.5"
walkdir = "2"
dirs = "5"
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
